# bale-price-alert

./: .env.example  .gitignore  COMPLETE_DEPLOYMENT_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_SECURITY.md  INDEX.md  LIVE_STATUS.md  MEMORY.md  QUICKSTART.md  README.md  START_HERE.md  bale_price_alert.db  pyproject.toml
docs/: API.md  ARCHITECTURE.md  BOTFATHER_SETUP.md  BOT_BEHAVIOR.md  CODE_REALITY_REPORT.md  COMPLETE_WORK_REPORT.md  CONTRACTS_AND_POLICIES.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_LIMITATIONS.md  DEPLOYMENT_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_WORK_SUMMARY.md  IMPLEMENTATION_ROADMAP_FA.md  JOBS_AND_WORKERS.md  OBSERVABILITY.md  OPERATIONS.md  PREMIUM_FEATURES_PLAN.md  PRODUCTION_CHECKLIST_FA.md  PROGRESS.md  PROVIDERS.md  QUICK_REFERENCE.md  QUICK_START_FA.md  README.md  RECENT_CHANGES.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SERVER_STATUS.md  TELEGRAM_RUNBOOK.md  USER_GUIDE_FA.md  WORK_SUMMARY.md
migrations/: env.py
mini-app/: .env.example  README.md  package-lock.json  server.ts  vite.config.ts
proxy/: README.md  package.json  price-proxy.js
scripts/: DEPLOY_NOW.sh  ONE-COMMAND-SYNC.sh  deploy-backend-production.sh  deploy-plan.py  deploy-python.py  deploy-security.sh  deploy-ssh.sh  deploy-to-vps.sh  deploy-vps-only.sh  fetch_prices_to_vps.py  local-quality-check.sh  manual-deploy-guide.sh  monitor-health.sh  pm2-start-mini.sh  smoke-local.sh  sync-latest.sh  test-vps-connection.sh  test_all.sh  test_integration.py  test_telegram.py  verify-sync.sh
tests/: conftest.py  (+15 more)
(+108 files in other folders)
